# midi_controller

./: README.md  pyproject.toml
src/midi_controller/: application.py  hello_world.py
tests/: test_hello_world.py
